--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,11 @@
 name: PowerShell Lint with PSScriptAnalyzer
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   lint:
